Minor layout issues fixed: added label saying 'id:' before the id and 'cursor:pointer' for clickeable elements. Also moved specific css  out of layout.css
--HG--
branch : Hierarchy editor

--- a/app/assets/stylesheets/layers.css.scss
+++ b/app/assets/stylesheets/layers.css.scss
@@ -16,4 +16,115 @@
 
 #hierarchy_editor {
   padding: 10px;
+
+  .filter-header {
+    @include clearfix;
+    margin: 3px 0 6px;
+
+    #collapse-all {
+      @include border-radius(3px);
+      background: #d0d0d0;
+      display: inline-block;
+      padding: 2px 5px 2px 5px;
+      text-decoration: none !important;
+      cursor: pointer;
+    }
+  }
+
+  ul.h-editor {
+    margin: 0;
+    padding: 0;
+
+    li {
+      /*@include transition(all ease-out 0.2s);*/
+      list-style: none;
+      line-height: 24px;
+      padding: 0;
+      overflow: hidden;
+
+      .name {
+        @include border-radius(4px);
+        @include clearfix;
+        padding: 2px 0 2px 10px;
+        position: relative;
+
+        .n-label {
+          display: block;
+          width: 85%;
+          float: left;
+        }
+
+        .icon {
+          padding: 0 !important;
+          margin: 0 2px;
+          display: none;
+        }
+
+        span.arrow {
+          display: block;
+          width: 0px;
+          height: 0px;
+          border-style: solid;
+          float: left;
+          margin: 8px 4px 0 0;
+          cursor: pointer;
+
+        }
+
+        span.number {
+          font-size: 75%;
+          color: #999999;
+        }
+      }
+
+      .fields {
+        @include box-sizing(border-box);
+        @include clearfix;
+        padding: 6px 0 4px 15px;
+
+        .f-name {
+          width: 65%;
+        }
+
+        .f-id{
+          width: 20%;
+        }
+      }
+
+      &.active {
+
+        > div.name {
+          background: #d0d0d0;
+        }
+
+        .icon {
+          display: inline-block;
+        }
+      }
+
+      &.expanded {
+        height: auto;
+        .arrow {
+          border-width: .6em .35em 0 .35em;
+          border-color: #000000 transparent transparent transparent;
+        }
+      }
+
+      &.collapsed {
+        height: 30px;
+        .arrow {
+          border-width: .35em 0 .35em .6em;
+          border-color: transparent transparent transparent #000000 ;
+        }
+      }
+
+      &.expanded.active + li {
+        margin-top: -10px;
+      }
+
+      ul {
+        margin: 1px 0 0 25px;
+      }
+    }
+  }
 }
